# nano-claude

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-app-shell-and-layout/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-file-tree-and-code-editor/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-claude-code-integration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-change-detection-and-auto-jump/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-code-to-claude-interaction/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md  deferred-items.md
.planning/phases/06-terminal-panel/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
nano_claude/: __main__.py  app.py  cli.py  styles.tcss
nano_claude/config/: settings.py
nano_claude/models/: code_context.py  file_buffer.py
nano_claude/panels/: __init__.py  base.py  chat.py  editor.py  file_tree.py  terminal.py
nano_claude/services/: __init__.py  change_tracker.py  file_watcher.py
nano_claude/terminal/: __init__.py  pty_manager.py  status_parser.py  widget.py
nano_claude/widgets/: __init__.py  changed_files_overlay.py  diff_view.py  search_overlay.py  searchable_text_area.py
tests/: conftest.py  test_change_detection.py  test_change_tracker.py  test_chat_panel.py  test_code_interaction.py  test_editor.py  test_file_tree.py  test_file_watcher.py  test_focus.py  test_layout.py  test_resize.py  test_responsive.py  test_search.py  test_status_parser.py  test_terminal_panel.py  test_terminal_widget.py
