[project]
name = "nano-claude"
version = "0.1.0"
description = "A terminal-native IDE wrapper for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "textual[syntax]>=8.1,<9",
    "click>=8.1,<9",
    "watchfiles>=1.1.1",
    "tree-sitter-language-pack>=1.0.0",
    "pyte>=0.8.2",
]

[project.scripts]
nano-claude = "nano_claude.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "textual-dev",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
