[project]
name = "nano-claude"
version = "0.1.0"
description = "A terminal-native IDE that embeds Claude Code alongside a code editor, file tree, and terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Yaroslav Pankovych" },
]
keywords = ["claude", "ide", "terminal", "tui", "editor", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
dependencies = [
    "textual[syntax]>=8.1,<9",
    "click>=8.1,<9",
    "watchfiles>=1.1.1",
    "tree-sitter-language-pack>=1.0.0",
    "pyte>=0.8.2",
]

[project.scripts]
nano-claude = "nano_claude.cli:main"

[project.urls]
Homepage = "https://github.com/yaroslavpankovych/nano-claude"
Repository = "https://github.com/yaroslavpankovych/nano-claude"
Issues = "https://github.com/yaroslavpankovych/nano-claude/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.planning",
    "/.claude",
    "/tests",
    "/.git",
]

[tool.hatch.build.targets.wheel]
packages = ["nano_claude"]

[dependency-groups]
dev = [
    "textual-dev",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
